--- a/TestPlugin/TestPlugin/TestPlugin.vcxproj.filters
+++ b/TestPlugin/TestPlugin/TestPlugin.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="Plugin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WebsocketServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="exports.def">
