--- a/TestPlugin/TestPlugin/TestPlugin.vcxproj
+++ b/TestPlugin/TestPlugin/TestPlugin.vcxproj
@@ -184,9 +184,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Plugin.h" />
+    <ClInclude Include="ReadCache.hpp" />
     <ClInclude Include="ReClassAPI.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WebSocketServer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -204,6 +206,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Plugin.cpp" />
+    <ClCompile Include="ReadCache.cpp" />
     <ClCompile Include="WebsocketServer.cpp" />
   </ItemGroup>
   <ItemGroup>
